fixed button maker spacing on index.html

--- a/cl_button_maker/style.css
+++ b/cl_button_maker/style.css
@@ -448,3 +448,9 @@ ul {
   overflow: hidden;
   text-overflow: ellipsis;
 }
+
+#button_title
+{
+  margin-left: 2.5rem;
+  font-size: 25px;
+}
